amazon-sns/4.5/modules/ROOT/pages/index.adoc
= Amazon SNS Connector 4.5 - Get Started
:page-aliases: connectors::amazon/amazon-sns-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Amazon SNS Connector v4.5

Anypoint Connector for Amazon SNS (Amazon SNS Connector) provides connectivity to the Amazon Simple Notification Service (Amazon SNS) API, enabling you to build distributed web-enabled applications. Mule apps can use Amazon SNS Connector to easily push real-time notification messages to interested subscribers over multiple delivery protocols.

Release Notes: xref:release-notes::connector/amazon-sns-connector-release-notes-mule-4.adoc[Amazon SNS Connector Release Notes]
Exchange: https://anypoint.mulesoft.com/exchange/com.mulesoft.connectors/mule-amazon-sns-connector[Amazon SNS Connector in Anypoint Exchange]

NOTE: This connector does not support the use of FIFO queues. It allows publishing only to standard queues. 

== About Connectors

Anypoint Connectors are Mule runtime engine extensions that enable you to connect
to APIs and resources on external systems, such as Salesforce, Amazon SNS, ServiceNow, and Twitter.

== Prerequisites

Before creating an app, you must:

* Have access to the Amazon SNS target resource and Anypoint Platform.
* Understand how to create a Mule app using Design Center or Anypoint Studio.
* Have AWS Identity and Access Management (IAM) credentials.

=== Compatibility

Amazon SNS connector is compatible with:

[%header,cols="20a,80a",width=70%]
|===
|Application/Service|Version
|Mule Runtime |4.1.x
|AWS SDK for Java |1.11.969
|Java |1.8.0_x
|Anypoint Studio |7.0 or higher
|===

== Audience

* Starting user
+
To create your Mule app, see xref:amazon-sns-connector-design-center.adoc[Design Center Configuration] or xref:amazon-sns-connector-studio.adoc[Studio Configuration]. See xref:amazon-sns-connector-config-topics.adoc[Additional Configuration Information] to see what permissions AWS Identity and Access Management (IAM) users must have to use Amazon SNS Connector.
+
The xref:amazon-sns-connector-examples.adoc[Examples] topic provides one or more use cases for using this connector.

* Power user
+
Read the xref:amazon-sns-connector-xml-maven.adoc[XML and Maven Support], xref:amazon-sns-connector-config-topics.adoc[Additional Configuration Information],
and xref:amazon-sns-connector-examples.adoc[Examples] topics.

== Next Step

After you have met the prerequisites, you are ready to create an app with
xref:amazon-sns-connector-design-center.adoc[Design Center] or
xref:amazon-sns-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
